Fix separators in detail lists on small resolutions

--- a/web_app/static/scss/content.scss
+++ b/web_app/static/scss/content.scss
@@ -14,13 +14,14 @@ dl.detail-info {
     margin: 0 0 1rem 0;
 
     dt {
+        &.first-in-line,
         &:first-child {
             margin-left: 0;
             padding-left: 0;
             border-left: none;
         }
 
-        margin: 0 0.25rem 0 0.5rem;
+        margin: 0 0.4rem 0 0;
         padding: 0 0 0 0.5rem;
         display: inline-block;
         font-weight: normal;
@@ -28,13 +29,13 @@ dl.detail-info {
     }
 
     dd {
-        margin: 0;
+        margin: 0 0.4rem 0 0;
         display: inline-block;
         font-weight: bold;
     }
 
     .badge {
-        margin: 0 0.1rem;
+        margin: 0 0.4rem 0 0;
         font-size: inherit;
         background-color: $gray-400;
     }
